--- a/Project/Landing/css/main.css
+++ b/Project/Landing/css/main.css
@@ -194,11 +194,11 @@ li{
 INTRO CONTAINER
 =========================*/
 .starter_container {
-    margin-top: -21px;
+    margin-top: 0px;
     padding: 0;
     min-width: 100%;
     height: 100%;
-    background: url('../images/steak.jpg') no-repeat center center;
+    background: url('../images/background.png') no-repeat center center;
     background-size: cover;
     text-align: center;
     background-position: center;  
