--- a/Project/Landing/css/main.css
+++ b/Project/Landing/css/main.css
@@ -198,7 +198,7 @@ INTRO CONTAINER
     padding: 0;
     min-width: 100%;
     height: 100%;
-    background: url('../images/background.png') no-repeat center center;
+    background: url('../images/Background.jpg') no-repeat center center;
     background-size: cover;
     text-align: center;
     background-position: center;  
@@ -265,7 +265,7 @@ INTRO CONTAINER
 }
 
 .beer.background_content{
-    background: url('../images/beer.jpg') no-repeat center center; 
+    background: url('../images/contact_back.jpg') no-repeat center center; 
     background-size: cover;
     background-position: 70% 50%;
 }
@@ -276,13 +276,13 @@ INTRO CONTAINER
     background-position: 70% 50%;
 }
  .featured.background_content{
-    background: url('../images/featured.jpg') no-repeat center center; 
+    background: url('../images/featured_Back.jpg') no-repeat center center; 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
  .pricing.background_content{
-    background: url('../images/pricing.jpg') no-repeat center center; 
+    background: url('../images/prod_Back.jpg') no-repeat center center; 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -294,7 +294,7 @@ INTRO CONTAINER
     background-attachment: fixed;
 }
 .bread.background_content{
-    background: url('../images/breakfast.jpg') no-repeat center center; 
+    background: url('../images/prod_redeem_back.jpg') no-repeat center center; 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -526,7 +526,7 @@ p.sub-footer-text a{
     color:#fff;
     background:rgba(80, 160, 108, 1);
     border:none;
-    border-radius:3px;
+    border-radius:10px;
     outline: none;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
