--- a/Project/assets/css/customize.css
+++ b/Project/assets/css/customize.css
@@ -78,3 +78,158 @@
 	font-size: 16px !important;
 	color: #909090;
 }
+
+.background_content {
+    position: relative;
+    width: 100%;
+	float: left;
+    height: auto;
+    background-color: white;
+    margin: 3% auto 7% auto;
+    z-index: 98;
+    text-align: center;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.background_content h1 {
+	position: relative;
+    font-size: 5em;
+	margin: 20% 0 18% 0;
+    width: 100%;
+    color: white;
+    display: inline-block;
+}
+
+.background_content h1 span {
+    color: white;
+    border-bottom: 8px solid #fff;
+}
+
+.background_content2 {
+    position: relative;
+    width: 100%;
+	float: left;
+    height: auto;
+    background-color: white;
+    margin: 0 auto 7% auto;
+    z-index: 98;
+    text-align: center;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.background_content2 h1 {
+	position: relative;
+    font-size: 5em;
+	margin: 18% 0 18% 0;
+    width: 100%;
+    color: white;
+    display: inline-block;
+}
+
+.background_content2 h1 span {
+    color: white;
+    border-bottom: 8px solid #fff;
+}
+
+.about_us{
+	position: relative;
+	height: 180px;
+	font-size: 20px;
+	margin-left:25%;
+	margin-right:25%;
+    line-height: 35px;
+}
+
+div.a{
+	position: relative;
+	background-color:white;
+	text-align:center;
+}
+
+div.b{
+	position: relative;
+	margin: 0 auto 8% auto;
+}
+
+div.c{
+	position: relative;
+	float: left;	
+	margin: 0 auto -18% 0;
+	background-color:#f4f5f7;
+}
+
+.alignment{
+	position: relative;
+	margin-bottom:2%;
+	font-weight:bold;
+}
+
+.column {
+	position: relative;
+	height: 500px;
+	float: left;
+	width: 29%;
+	padding: 0 8px;
+	margin: 0 10% 5% 10%;	
+}
+
+.column2 {
+	position: relative;
+	height: 500px;
+	float: left;
+	width: 20%;
+	margin: 4% 0 0 4%;
+}	
+
+.column3 {
+	position: relative;
+	height: 600px;
+	float: left;
+	width: 30%;
+	margin-left:12%;
+	padding: 0 8px;
+}
+
+.card2{
+	position: relative;
+	height:auto;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.title {
+	color: #A8A8A8;
+	padding: 0 5px;
+}
+
+.title2 {
+	color: black;
+}
+
+.button:hover {
+	background-color: #555;
+}
+
+.card2::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.map_size{
+	height:400px;
+	border: 0;
+}
+
+
+
+
+
+
+
+
+
+
